--- a/application/views/scripts/user/signup.phtml
+++ b/application/views/scripts/user/signup.phtml
@@ -1,1 +1,3 @@
-<br /><br /><center>View script for controller <b>User</b> and script/action name <b>signup</b></center>
+<?php
+	$this->form->setAction($this->url());
+	echo $this->form;
