--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -5,19 +5,32 @@
         <title>MyTabCloud</title>
         
         <!-- blueprintcss dependency -->
-        <?php $this->headLink()->appendStylesheet('css/blueprint/screen.css', 'screen, projection') ?>
-        <?php $this->headLink()->appendStylesheet('css/blueprint/print.css', 'print') ?>
-        <?php $this->headLink()->appendStylesheet('css/mytabcloud.css') ?>
+        <?php $this->headLink()->appendStylesheet('/mytabcloud/public/css/blueprint/screen.css', 'screen, projection') ?>
+        <?php $this->headLink()->appendStylesheet('/mytabcloud/public/css/blueprint/print.css', 'print') ?>
+        <?php $this->headLink()->appendStylesheet('/mytabcloud/public/css/mytabcloud.css') ?>
         <?php echo $this->headLink(); ?>
         <!--[if lte IE8]>
-        <link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection" />
+        <link rel="stylesheet" href="/mytabcloud/public/css/blueprint/ie.css" type="text/css" media="screen, projection" />
         <![endif]-->       
         
                 
     </head>
     <body>
-               
-        <?php echo $this->layout()->content ?>
+        <div class="container">
+		    <div class="span-24 last">
+		        <h1><a href="<?php $this->url(array('controller' => 'index', 'action' => 'index'), 'default', true); ?>">MyTabCloud : Online Tab Editor</a></h1>
+		    </div>
+		    <div class="span-18 colborder">
+		    	<?php echo $this->layout()->content ?>	
+			</div>
+			<div class="span-5 last">
+				<?php echo $this->action('signin', 'user'); ?>
+			</div>
+			<div class="span-24 last">
+		        Footer
+		    </div>
+		</div>
+        
        
     </body>
 </html>
