--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -26,8 +26,9 @@
 			<div class="span-5 last">
 				<?php echo $this->action('signin', 'user'); ?>
 			</div>
-			<div class="span-24 last">
-		        Footer
+			<div class="span-24 last footer">
+		        <img src="/mytabcloud/public/images/zend_powered.png" /><br />
+		        Except where otherwise noted, content on this site is licensed under a Creative Commons Attribution 3.0 License
 		    </div>
 		</div>
         
