--- a/public/css/mytabcloud.css
+++ b/public/css/mytabcloud.css
@@ -1,3 +1,8 @@
 .footer {
 	text-align: center;
 }
+
+.tab_line { width: 800px; height: 150px; background-image: url('/mytabcloud/public/images/tab.jpg'); background-repeat: no-repeat; background-position: 0px 10px; }
+.tab_line table { width: auto; }
+.tab_line td { background-color: transparent; padding: 0 0 0 0; margin: 0 0 0 0; }
+.tab_line input { margin: 0 0 0 0; padding: 0 0 0 0; border: 0px; text-align:center; background: transparent; height:1.5em; width:2em; }
