Constantes et Tab

--- a/application/views/scripts/tab/create.phtml
+++ b/application/views/scripts/tab/create.phtml
@@ -1,115 +1,18 @@
 <?php ?>
-
-<div class="tab_line">
-	<table class="tab" style="margin-left:20px;" border=0 cellspacing="0" cellpadding="0">
-		<tr>
-			<td><input type="text" maxlength="3" size="2" /></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text1" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text2" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text3" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text4" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text5" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text6" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text7" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text8" NAME="Text8"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text9" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text10" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text11" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text12" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text13" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text14" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text15" NAME="Text3"/></td>
-		</tr>
-		<tr>
-			<td><input type="text" maxlength="3" size="2" ID="Text16" NAME="Text16"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text17" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text18" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text19" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text20" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text21" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text22" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text23" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text24" NAME="Text8"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text25" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text26" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text27" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text28" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text29" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text30" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text31" NAME="Text3"/></td>
-		</tr>
-		<tr>
-			<td><input type="text" maxlength="3" size="2" ID="Text32" NAME="Text32"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text33" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text34" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text35" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text36" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text37" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text38" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text39" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text40" NAME="Text8"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text41" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text42" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text43" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text44" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text45" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text46" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text47" NAME="Text3"/></td>
-		</tr>
-		<tr>
-			<td><input type="text" maxlength="3" size="2" ID="Text48" NAME="Text48"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text49" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text50" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text51" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text52" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text53" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text54" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text55" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text56" NAME="Text8"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text57" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text58" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text59" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text60" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text61" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text62" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text63" NAME="Text3"/></td>
-		</tr>
-		<tr>
-			<td><input type="text" maxlength="3" size="2" ID="Text64" NAME="Text64"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text65" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text66" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text67" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text68" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text69" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text70" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text71" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text72" NAME="Text8"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text73" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text74" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text75" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text76" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text77" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text78" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text79" NAME="Text3"/></td>
-		</tr>
-		<tr>
-			<td><input type="text" maxlength="3" size="2" ID="Text80" NAME="Text80"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text81" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text82" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text83" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text84" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text85" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text86" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text87" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text88" NAME="Text8"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text89" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text90" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text91" NAME="Text3"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text92" NAME="Text4"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text93" NAME="Text1"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text94" NAME="Text2"/></td>
-			<td><input type="text" maxlength="3" size="2" ID="Text95" NAME="Text3"/></td>
-		</tr>
-	</table>
-
-</div>
+<form id="createtab" enctype="application/x-www-form-urlencoded" method="post" action="/mytabcloud/public/tab/create">
+    <dl class="zend_form">
+        <dt id="formname-label">&#160;</dt>
+        <dd id="formname-element"><input type="hidden" name="formname" value="createtab" id="formname" /></dd>
+        <dt id="artist-label"><label for="artist" class="required">Artist</label></dt>                     
+        <dd id="artist-element"><input type="text" name="artist" id="artist" value="" /></dd>
+        <dt id="title-label"><label for="title" class="required">Title</label></dt>                     
+        <dd id="title-element"><input type="text" name="title" id="title" value="" /></dd>
+    </dl>
+    
+    <?php echo $this->tab_display; ?>
+        
+    <dl class="zend_form">
+        <dt id="submit-label">&#160;</dt><dd id="submit-element">
+        <input type="submit" name="submit" id="submit" value="Save" /></dd>
+    </dl>
+</form>
