--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,1 +1,8 @@
-Test
+<?php  
+    if($this->user()) {
+        echo "Connecté : " . $this->user(); 
+    } else {
+        echo "Non connecté";
+    }
+            
+?>
