--- a/application/views/scripts/tab/create.phtml
+++ b/application/views/scripts/tab/create.phtml
@@ -1,6 +1,6 @@
 <?php ?>
 <?php
-    if($this->logged) {
+    if($this->user()) {
         if($this->display_form) {
 ?>
         <form id="createtab" enctype="application/x-www-form-urlencoded" method="post" action="/mytabcloud/public/tab/create">
