--- a/application/views/scripts/user/signin.phtml
+++ b/application/views/scripts/user/signin.phtml
@@ -1,12 +1,12 @@
 <?php
 	// Si l'utilisateur n'est pas loggé, on affiche le formulaire de login
-	if(!$this->logged) {
+	if(!$this->user()) {
 		$this->form->setAction($this->url());
 		echo $this->message;
 		echo $this->form;		
 		echo "<a href=".$this->signupURL.">New user ? Sign up !</a>";
 	// Sinon on affiche son nom et le lien pour se déconnecter
 	} else {
-		echo "Welcome, " . $this->username . "<br />";
+		echo "Welcome, " . $this->user() . "<br />";
 		echo "<a href=".$this->signoutURL.">Logout</a>";
 	}
