--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -17,7 +17,7 @@
         
         <?php $this->headScript()->appendFile('/mytabcloud/public/js/jquery.min.js'); ?>
         <?php $this->javascriptHelper(); ?>
-        <?=$this->headScript()?>
+        <?php echo $this->headScript(); ?>
         
                 
     </head>
