--- a/public/css/mytabcloud.css
+++ b/public/css/mytabcloud.css
@@ -6,3 +6,6 @@
 .tab_line table { width: auto; }
 .tab_line td { background-color: transparent; padding: 0 0 0 0; margin: 0 0 0 0; background-image: url('/mytabcloud/public/images/tab_line.png'); background-repeat: repeat-x; background-position: center left; }
 .tab_line input { margin: 0 0 0 0; padding: 0 0 0 0; border: 0px; text-align:center; background: transparent; height:1.5em; width:2em; }
+
+.tuning { }
+.tuning input { }
