--- a/application/views/scripts/tab/create.phtml
+++ b/application/views/scripts/tab/create.phtml
@@ -3,25 +3,52 @@
     if($this->user()) {
         if($this->display_form) {
 ?>
+        <map name='nb_strings_map'>                        
+           <area shape='rect' coords='0,11,20,22' href="" />                        
+           <area shape='rect' coords='0,0,20,10' href="" />                        
+        </map>
         <form id="createtab" enctype="application/x-www-form-urlencoded" method="post" action="/mytabcloud/public/tab/create">
-            <dl class="zend_form">
-                <dd id="formname-element"><input type="hidden" name="formname" value="<?php echo $this->form_name; ?>" id="formname" /></dd>
-                <dt id="artist-label"><label for="artist" class="required">Artist</label></dt>                     
-                <dd id="artist-element"><input type="text" name="artist" id="artist" value="<?php echo $this->params['artist']; ?>" /></dd>
-                <dt id="title-label"><label for="title" class="required">Title</label></dt>                     
-                <dd id="title-element"><input type="text" name="title" id="title" value="<?php echo $this->params['title']; ?>" /></dd>
-                <dt id="title-label"><label for="nb_strings" class="required">Number of strings</label></dt>                     
-                <dd id="title-element"><input type="text" name="nb_strings" id="nb_strings" value="<?php echo $this->params['nb_strings']; ?>" /></dd>
-                <dt id="title-label"><label for="capo" class="required">Capo</label></dt>                     
-                <dd id="title-element"><input type="text" name="capo" id="capo" value="<?php echo $this->params['capo']; ?>" /></dd>
+        <div class="container">
+            <div class="span-9 colborder">
+            <input type="hidden" name="formname" value="<?php echo $this->form_name; ?>" id="formname" />
+            <h3>Song information</h3>
+            <table>
+                <tr>
+                    <td><label for="artist" class="required">Artist</label></td>
+                    <td><input type="text" name="artist" id="artist" value="<?php echo $this->params['artist']; ?>" /></td>
+                </tr>                     
+                <tr>
+                    <td><label for="title" class="required">Title</label></td>                     
+                    <td><input type="text" name="title" id="title" value="<?php echo $this->params['title']; ?>" /></td>
+                </tr>
+            </table>
                 <!-- <dt id="title-label"><label for="tuning" class="required">Tuning</label></dt>                     
                 <dd id="title-element"><input type="text" name="tuning" id="tuning" value="<?php echo $this->params['tuning']; ?>" /></dd> -->
-            </dl>
-            
+            </div>
+            <div class="span-9 last">
+            <h3>Tab configuration</h3>
+            <table>
+                <tr>
+                    <td><label for="nb_strings" class="required">Strings</label></td>                     
+                    <td>
+                        <input type="text" name="nb_strings" id="nb_strings" size="5" value="<?php echo (($this->params['nb_strings'] != "") ? $this->params['nb_strings'] : 6); ?>" />
+                        <img src='/mytabcloud/public/images/plusmoins.gif' width='14' height='19' align='center' hspace='0' border='0' usemap='#nb_strings_map'></img>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="capo" class="required">Capo</label></td>                     
+                    <td>
+                        <input type="text" name="capo" id="capo" size="5" value="<?php echo (($this->params['capo'] != "") ? $this->params['capo'] : 0); ?>" />
+                        <img src='/mytabcloud/public/images/plusmoins.gif' width='14' height='19' align='center' hspace='0' border='0' usemap='#nb_strings_map'></img>
+                    </td>
+                </tr>
+               </table>   
+            </div>
+         </div>   
             <?php if($this->params['nb_strings'] != "") {?>
             <div class="tuning">
             	<?php for($str_tun = 0 ; $str_tun < $this->params['nb_strings'] ; $str_tun++) { 
-            		echo '<input type="text" name="tuning_string_'.$str_tun.'" value=""><br />';
+            		//echo '<input type="text" name="tuning_string_'.$str_tun.'" value=""><br />';
             	} ?>
             </div>
            	<?php } ?>
