--- a/application/views/scripts/tab/create.phtml
+++ b/application/views/scripts/tab/create.phtml
@@ -32,14 +32,14 @@
                     <td><label for="nb_strings" class="required">Strings</label></td>                     
                     <td>
                         <input type="text" name="nb_strings" id="nb_strings" size="5" value="<?php echo (($this->params['nb_strings'] != "") ? $this->params['nb_strings'] : 6); ?>" />
-                        <img src='/mytabcloud/public/images/plusmoins.gif' width='14' height='19' align='center' hspace='0' border='0' usemap='#nb_strings_map'></img>
+                        <img src='/mytabcloud/public/images/plusmoins.gif' width='14' height='19' style="vertical-align:middle;" hspace='0' border='0' usemap='#nb_strings_map'></img>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="capo" class="required">Capo</label></td>                     
                     <td>
                         <input type="text" name="capo" id="capo" size="5" value="<?php echo (($this->params['capo'] != "") ? $this->params['capo'] : 0); ?>" />
-                        <img src='/mytabcloud/public/images/plusmoins.gif' width='14' height='19' align='center' hspace='0' border='0' usemap='#nb_strings_map'></img>
+                        <img src='/mytabcloud/public/images/plusmoins.gif' width='14' height='19' style="vertical-align:middle;" hspace='0' border='0' usemap='#nb_strings_map'></img>
                     </td>
                 </tr>
                </table>   
