--- a/application/views/scripts/tab/create.phtml
+++ b/application/views/scripts/tab/create.phtml
@@ -59,6 +59,7 @@
             </div>
             
             <p class="add_line"><a href="javascript:addTabLine();">Add Line</a></p>
+            <p class="add_line"><a href="javascript:setNbStrings(4);">Remove Line</a></p>
             <?php } ?>
                 
             <dl class="zend_form">
