--- a/application/views/scripts/tab/create.phtml
+++ b/application/views/scripts/tab/create.phtml
@@ -4,13 +4,13 @@
         if($this->display_form) {
 ?>
         <map name='nb_strings_map'>                        
-           <area shape='rect' coords='0,11,20,22' href="javascript:fctDown('#nb_strings');" />                        
-           <area shape='rect' coords='0,0,20,10' href="javascript:fctUp('#nb_strings');" />                        
+           <area shape='rect' coords='0,11,20,22' href="javascript:fctDown('#nb_strings', 1);" />                        
+           <area shape='rect' coords='0,0,20,10' href="javascript:fctUp('#nb_strings', 10);" />                        
         </map>
         
         <map name='capo_map'>                        
-           <area shape='rect' coords='0,11,20,22' href="javascript:fctDown('#capo');" />                        
-           <area shape='rect' coords='0,0,20,10' href="javascript:fctUp('#capo');" />                        
+           <area shape='rect' coords='0,11,20,22' href="javascript:fctDown('#capo', 0);" />                        
+           <area shape='rect' coords='0,0,20,10' href="javascript:fctUp('#capo', 25);" />                        
         </map>
         
         <form id="createtab" enctype="application/x-www-form-urlencoded" method="post" action="/mytabcloud/public/tab/create">
@@ -37,7 +37,7 @@
                 <tr>
                     <td><label for="nb_strings" class="required">Strings</label></td>                     
                     <td>
-                        <input type="text" name="nb_strings" id="nb_strings" size="5" value="<?php echo (($this->params['nb_strings'] != "") ? $this->params['nb_strings'] : 6); ?>" />
+                        <input type="text" name="nb_strings" id="nb_strings" size="5" value="<?php echo (($this->params['nb_strings'] != "") ? $this->params['nb_strings'] : DEFAULT_STRINGS); ?>" />
                         <img src='/mytabcloud/public/images/updown.png' width='14' height='19' style="vertical-align:middle;" usemap='#nb_strings_map'></img>
                     </td>
                 </tr>
@@ -46,6 +46,23 @@
                     <td>
                         <input type="text" name="capo" id="capo" size="5" value="<?php echo (($this->params['capo'] != "") ? $this->params['capo'] : 0); ?>" />
                         <img src='/mytabcloud/public/images/updown.png' width='14' height='19' style="vertical-align:middle;" usemap='#capo_map'></img>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label class="required">Tuning</label></td>                     
+                    <td id="td_tuning">
+					<?php
+						for($tun_str = 0 ; $tun_str < DEFAULT_STRINGS ; $tun_str++) {
+							echo '<div id="tuning_div_' . $tun_str . '">';
+							echo '<input type="text" name="tuning_' . $tun_str . '" id="tuning_' . $tun_str . '" size="3" value="E4" />';
+							echo '<img src="/mytabcloud/public/images/updown.png" width="14" height="19" class="updownimg" usemap="#map_tuning_'.$tun_str.'"></img>';
+							echo '<map name="map_tuning_'.$tun_str.'">';
+							echo '	<area shape="rect" coords="0,11,20,22" href="javascript:fctTuneDown(\'#tuning_'.$tun_str.'\');" />';
+							echo '	<area shape="rect" coords="0,0,20,10" href="javascript:fctTuneUp(\'#tuning_'.$tun_str.'\');" />';                        
+							echo '</map>';
+							echo '</div>';
+						}
+					?>
                     </td>
                 </tr>
                </table>   
