Display tab with capo

--- a/application/views/scripts/tab/display.phtml
+++ b/application/views/scripts/tab/display.phtml
@@ -1,8 +1,11 @@
 <?php
 	if($this->has_tab) {
 ?>	
-	<center><h2><?php echo $this->artist; ?></h2>
-	<h3><?php echo $this->title; ?></h3></center>		
+	<center><h2><?php echo $this->tablature->getArtist(); ?></h2>
+	<h3><?php echo $this->tablature->getTitle(); ?></h3></center>
+	
+	<?php if($this->tablature->getCapo() != 0) { echo "<p>Capo : " . $this->tablature->getCapo() . "</p>"; } ?>	
+	
 	<?php echo $this->tab_display;?>
 <?php		
 	} else {
