Added Tab Description

--- a/application/views/scripts/tab/create.phtml
+++ b/application/views/scripts/tab/create.phtml
@@ -27,6 +27,10 @@
                     <td><label for="title" class="required">Title</label></td>                     
                     <td><input type="text" name="title" id="title" value="<?php echo $this->params['title']; ?>" /></td>
                 </tr>
+                <tr>
+                    <td><label for="description" class="required">Description</label></td>                     
+                    <td><textarea name="description" id="description" class="tab_description"><?php echo $this->params['description']; ?></textarea></td>
+                </tr>
             </table>
                 <!-- <dt id="title-label"><label for="tuning" class="required">Tuning</label></dt>                     
                 <dd id="title-element"><input type="text" name="tuning" id="tuning" value="<?php echo $this->params['tuning']; ?>" /></dd> -->
