--- a/application/views/scripts/tab/display.phtml
+++ b/application/views/scripts/tab/display.phtml
@@ -4,6 +4,7 @@
 	<center><h2><?php echo $this->tablature->getArtist(); ?></h2>
 	<h3><?php echo $this->tablature->getTitle(); ?></h3></center>
 	
+	<?php echo "<p>" . $this->tablature->getDescription() . "</p>"; ?>
 	<?php if($this->tablature->getCapo() != 0) { echo "<p>Capo : " . $this->tablature->getCapo() . "</p>"; } ?>	
 	
 	<?php echo $this->tab_display;?>
