--- a/public/css/mytabcloud.css
+++ b/public/css/mytabcloud.css
@@ -1,6 +1,11 @@
-.footer {
-	text-align: center;
-}
+body { background-color:#6c4b2e; }
+
+.general_container {  background-image: url('/mytabcloud/public/images/mtc_body_bg.png'); background-position:top center; background-repeat:repeat-x; background-color:#ffedd1; padding-bottom:20px; }
+.header { margin-top:20px; }
+
+.footer { width:100%; margin-top:20px; }
+
+.footer_img { background-image: url('/mytabcloud/public/images/guitar_footer.png'); background-repeat: no-repeat;height:36px; width:380px; margin-left:200px; }
 
 #tab_display { margin-top:20px; }
 
